[package]
name = "rust-vm"
version = "0.1.0"
edition = "2021"

[lib]
name = "rusty_vdbe"
path = "src/lib.rs"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
bincode = "1.3.3"
num_enum = "0.5.10"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }

[build-dependencies]
bindgen = "0.53"
